--- a/styles/markdown-styles.module.css
+++ b/styles/markdown-styles.module.css
@@ -18,9 +18,14 @@
   .markdown blockquote {
     @apply my-6;
   }
+
+  .markdown h1 {
+    @apply text-4xl font-bold mt-12 mb-4 leading-snug;
+  }
+  
   
   .markdown h2 {
-    @apply text-3xl mt-12 mb-4 leading-snug;
+    @apply text-3xl mt-8 mb-4 leading-snug;
   }
   
   .markdown h3 {
