--- a/components/molecules/Post/post-styles.module.css
+++ b/components/molecules/Post/post-styles.module.css
@@ -1,3 +1,10 @@
 .h1 {
   @apply text-5xl md:text-7xl lg:text-8xl font-bold tracking-tighter leading-tight md:leading-none mb-12 text-center md:text-left
 }
+
+.post_container {
+  word-wrap: break-word;
+  max-width: 42rem;
+  margin-left: auto;
+  margin-right: auto;
+}
