--- a/styles/markdown-styles.module.css
+++ b/styles/markdown-styles.module.css
@@ -2,32 +2,32 @@
     @apply text-lg leading-relaxed;
   }
   
-  .markdown p,
-  .markdown ul {
-    list-style: auto;
-    margin: auto;
-    padding: revert;
-  }
+.markdown p,
+.markdown ul {
+  list-stylse: auto;
+  margin: auto;
+  padding: revert;
+}
 
-  .markdown ol {
-    list-style: auto;
-    margin: auto;
-    padding: revert;
-  }
+.markdown ol {
+  list-style: auto;
+  margin: auto;
+  padding: revert;
+}
 
-  .markdown blockquote {
-    @apply my-6;
-  }
+.markdown blockquote {
+  @apply my-6;
+}
 
-  .markdown h1 {
-    @apply text-4xl font-bold mt-12 mb-4 leading-snug;
-  }
-  
-  
-  .markdown h2 {
-    @apply text-3xl mt-8 mb-4 leading-snug;
-  }
-  
-  .markdown h3 {
-    @apply text-2xl mt-8 mb-4 leading-snug;
-  }
+.markdown h1 {
+  @apply text-4xl font-bold mt-12 mb-4 leading-snug;
+}
+
+
+.markdown h2 {
+  @apply text-3xl mt-8 mb-4 leading-snug;
+}
+
+.markdown h3 {
+  @apply text-2xl mt-8 mb-4 leading-snug;
+}
