--- a/components/molecules/NotePreview/note-preview-styles.module.css
+++ b/components/molecules/NotePreview/note-preview-styles.module.css
@@ -19,3 +19,16 @@
     font-style: italic; 
     color: grey;
 }
+
+@media screen and (max-width: 1024px) {
+    .container {
+        display: flex;
+        align-items: flex-start;
+        flex-direction: column;
+    }
+    
+    .sidebar {
+        display: block;
+    }
+}
+
