--- a/components/molecules/Post/post-styles.module.css
+++ b/components/molecules/Post/post-styles.module.css
@@ -1,5 +1,5 @@
-.h1 {
-  @apply text-5xl md:text-7xl lg:text-8xl font-bold tracking-tighter leading-tight md:leading-none mb-12 text-center md:text-left
+.title {
+  margin-bottom: 3rem;
 }
 
 .post_container {
