--- a/components/atoms/Text/text.module.scss
+++ b/components/atoms/Text/text.module.scss
@@ -13,10 +13,12 @@
   font-weight: 700;
 }
   
-  .h3 {
-    font-size: 3rem;
-    font-weight: 500;
-  }
+.h3 {
+  letter-spacing: -.04em;
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+  font-weight: 700;
+}
   
   .h4 {
     font-size: 2.125rem;
